@@ -56,6 +56,8 @@ Fixed bugs:
 
 * AntLikeTasksAtTopLevelTest failed on cygwin.
 
+* replacestring tokenfilter only replaced the first occurrence.
+
 Other changes:
 --------------
 
